[package]
name = "gopro-controller"
version = "0.10.5"
edition = "2021"
authors = ["roomtin <roomtin@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
description = "Open source Rust Library for interacting with GoPro Cameras over BLE and WiFi"
categories = ["api-bindings", "multimedia", "embedded"]
keywords = ["gopro", "camera", "bluetooth", "hero"]
repository = "https://github.com/roomtin/gopro-controller"

#Reminder to flag features
#no-publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.1"
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
uuid = "1.5.0"

[features]
default = ["settings"]
settings = []
query = []
wifi = ["query"]
